--- a/index.html
+++ b/index.html
@@ -2,4 +2,33 @@
 <h2>Hakkımda</h2>
 <h4>Merhaba ben Meryem Isparta'da yaşıyorum. Film izlemeyi ve müzik dinlemeyi çok seviyrum.Büyük Marvel hayranıyım.Şu sıralar Web geliştirmeyi öğreniyorum. 20 yaşındayım.</h3>
 <h2>Sevdiğim filmler</h2>
-<h4>inception,X-Men,Parasite</h3>
+<h2>1.Film</h2>
+<ul>
+ <li> <a href="https://www.fullhdfilmizlesene.de/film/baslangic-fh1/" target="_blank"> ınception </a> </li>
+<li>Matrix</li>
+<li>M-Men</li>
+</ul>
+<h2>2.Dizi</h2>
+<ul>
+<li> <a href="https://dizigom1.co/moving-1-sezon-1-bolum-hd1/"  target="_blank"> moving </a>  </li>
+<li>the100</li>
+<li>happines</li>
+
+</ul>
+<h2>3.Kitap </h2>
+<ul>
+<li>bir kadının yasamından 24 saat</li>
+<li>demir ökçe</li>
+<li>insan ne ile yaşar</li>
+
+</ul>
+<h1>Sevdiğim Diziler</h1>
+<h2>Star Trek:The Next Generation</h2>
+<img width="600px" height="500px"  src="https://sm.ign.com/t/ign_nordic/lists/h/how-to-wat/how-to-watch-star-trek-in-order-the-complete-series-timeline_73rj.1280.jpg" alt="">
+<p>Uzay Yolu:Yeni nesil Gene Rodden berry tarafından yaratılmış olan kurgusal Uzay Yolu evreninde geçen bir bilimkurgu dizisidir.Türkiye'de 1990-1977 yılları arasında Star TV'de yayınlanmıştır.</p>
+
+
+
+</h2>
+
+
